php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #26488 Missing declaration of CRTSCTS in ext/dio/dio.c
Submitted: 2003-12-01 09:45 UTC Modified: 2003-12-01 11:35 UTC
From: tom at arch dot ethz dot ch Assigned:
Status: Closed Package: Compile Failure
PHP Version: 4.3.4 OS: IRIX 6.5.21
Private report: No CVE-ID: None
 [2003-12-01 09:45 UTC] tom at arch dot ethz dot ch
Description:
------------
Missing declaration of CRTSCTS in ext/dio/dio.c which is 
used in line 565 in dio.c 
 
I added a declaration as long in line 426, works for me. 
 
btw, thanks for php! 
 

Reproduce code:
---------------
./configure --prefix=/a/path/php-4.3.4 --with-apxs=/a/path/apache/bin/apxs --with-mysql=/a/path/mysql --with-imap=/a/path/imap-2002e --with-ldap=/a/path --with-zlib=/a/path --with-gd=/a/path --with-pdflib=/a/path --with-tiff-dir=/a/path --with-jpeg-dir=/a/path --with-png-dir=/a/path --with-freetype-dir=/a/path --with-gettext=/a/path --with-xml=/a/path --with-xpm-dir=/a/path --with-dom=/a/path --with-iconv=/a/path --with-pear --enable-mime-magic --enable-mbstring --enable-dio --enable-ftp --enable-yp --enable-gd-native-ttf --enable-sysvsem --enable-tokenizer --enable-versioning --enable-track-vars

make

Expected result:
----------------
... 
... 
 
Build complete. 
;) 
 


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2003-12-01 11:35 UTC] sniper@php.net
This bug has been fixed in CVS.

In case this was a PHP problem, snapshots of the sources are packaged
every three hours; this change will be in the next snapshot. You can
grab the snapshot at http://snaps.php.net/.
 
In case this was a documentation problem, the fix will show up soon at
http://www.php.net/manual/.

In case this was a PHP.net website problem, the change will show
up on the PHP.net site and on the mirror sites in short time.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 18:00:01 2026 UTC