- Fixed bug #26488 (Missing declaration of CRTSCTS in ext/dio/dio.c)